02.TypeScript/Day2/Examples/EmpModule_Test.ts
import * as EmpModule from './EmpModule';


console.log(EmpModule.age);
console.log(EmpModule.getData());
let obj:EmpModule.Employee  = new  EmpModule.Employee();

// console.log(EmpModule.companyName);   // error


